TV: remove .idea/workspace.xml from repo

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ hs_err_pid*
 
 # build artifacts from ANT
 build/artifacts
+
+# this file changes constantly... so I'm going to ignore it
+./idea/workspace.xml
+
