TV: removed intellij project files 'cos I can't be bothered working out how to get them to work

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ hs_err_pid*
 # build artifacts from ANT
 build/artifacts
 
-# this file changes constantly... so I'm going to ignore it
-.idea/workspace.xml
-
+# I hate .idea
+.idea
+utterlyswagger.iml
