--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="utterlyidle" default="build">
+<project name="utterlyswagger" default="build">
 
     <property name="build.number" value="dev.build"/>
     <property name="build" value="${basedir}/build"/>
@@ -64,8 +64,8 @@
         <zip destfile="${artifacts}/${tests.src}" basedir="test"/>
 
         <exec executable="git" output="${artifacts}/commit.properties" error="${artifacts}/commit.error">
-	        <arg line='log -n 1 --pretty=format:"user:%an%ndate:%aD%nsummary:%s%nchangeset:%H"'/>
-	    </exec>
+            <arg line='log -n 1 --pretty=format:"user:%an%ndate:%aD%nsummary:%s%nchangeset:%H"'/>
+        </exec>
         <property file="${artifacts}/commit.properties" prefix="commit"/>
 
         <propertyfile file="${artifacts}/release.properties">
@@ -76,11 +76,14 @@
             <entry key="release.version" value="${release.version}"/>
             <entry key="project.name" value="${ant.project.name}"/>
             <entry key="release.name" value="${release.name}"/>
-            <entry key="release.path" value="com/googlecode/${ant.project.name}/${ant.project.name}/${release.version}/"/>
-            <entry key="release.files" value="${release.jar},${release.nodeps.jar},${release.pom},${release.src},${tests.jar},${tests.src}"/>
+            <entry key="release.path"
+                   value="com/googlecode/${ant.project.name}/${ant.project.name}/${release.version}/"/>
+            <entry key="release.files"
+                   value="${release.jar},${release.nodeps.jar},${release.pom},${release.src},${tests.jar},${tests.src}"/>
             <entry key="${release.jar}.description" value="${commit.summary} build:${build.number} "/>
             <entry key="${release.jar}.labels" value="Jar"/>
-            <entry key="${release.nodeps.jar}.description" value="${commit.summary} build:${build.number} No Dependencies"/>
+            <entry key="${release.nodeps.jar}.description"
+                   value="${commit.summary} build:${build.number} No Dependencies"/>
             <entry key="${release.nodeps.jar}.labels" value="Jar NoDeps"/>
             <entry key="${release.pom}.description" value="Maven POM file build:${build.number}"/>
             <entry key="${release.pom}.labels" value="POM"/>
@@ -92,9 +95,9 @@
             <entry key="${tests.src}.labels" value="Test Sources"/>
         </propertyfile>
 
-         <generate.pom artifact.uri="mvn:com.googlecode.${ant.project.name}:${ant.project.name}:jar:${release.version}"
-                         dependencies="build/runtime.dependencies"
-                         directory="${artifacts}"/>
+        <generate.pom artifact.uri="mvn:com.googlecode.${ant.project.name}:${ant.project.name}:jar:${release.version}"
+                      dependencies="build/runtime.dependencies"
+                      directory="${artifacts}"/>
     </target>
 
     <target name="build" description="build all">
